<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeatherForecastTester</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="latitudeString"/>
    <string name="latTextViewString">Latitude:</string>
    <string name="lngTextViewString">Longitude:</string>
    <string name="cityTextViewString">City:</string>
    <string name="tempTextViewString">Temperatur:</string>
    <string name="windTextViewString">Windstärke:</string>
    <string name="cloudsTextViewString">Bewölkung:</string>
    <string name="tempMinTextViewString">Min. Temperatur:</string>
    <string name="tempMaxTextViewString">Max. Temperatur:</string>
    <string name="rainTextViewString">Regenwahrscheinlichkeit:</string>
    <string name="buttonString">Forecast</string>

</resources>
